force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/Monthly_Sales_Forecast_VS_Actual_Report__c.object-meta.xml
<CustomObject>
    <label>MonthlySalesForecastVSActualReport</label>
    <nameField>
        <label>Monthly Sales Forecast VS Actual Report</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>