force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/Date_Year_And_Month__c.field-meta.xml
<CustomField>
    <fullName>Date_Year_And_Month__c</fullName>
    <label>Date(Year and Month)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>