force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/DO_Released_Not_Invoced_Turnover__c.field-meta.xml
<CustomField>
    <fullName>DO_Released_Not_Invoced_Turnover__c</fullName>
    <label>DO Released Not Invoced Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>