force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/Invoiced_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Turnover__c</fullName>
    <label>Invoiced Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>