force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/N_Month_Gap__c.field-meta.xml
<CustomField>
    <fullName>N_Month_Gap__c</fullName>
    <formula>N_Month_Planned_Sales_Volume__c  -  N_Month_Invoiced_Volume__c  -  N_Month_DO_Released_Not_Invoced_Volume__c  -  N_Month_Not_Released_Order__c  -  N_Month_Virtual_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N Month&apos;s Gap</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>