force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/N_Month_Not_Released_Order__c.field-meta.xml
<CustomField>
    <fullName>N_Month_Not_Released_Order__c</fullName>
    <label>N Month&apos;s Not Released Order</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>