force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/N_Month_Planned_Sales_Income__c.field-meta.xml
<CustomField>
    <fullName>N_Month_Planned_Sales_Income__c</fullName>
    <label>N Month&apos;s Planned Sales Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>