force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/Open_Order_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_Turnover__c</fullName>
    <label>Open Order Turnover(del)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>