force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/Oversea_Company_Sales_Department__c.field-meta.xml
<CustomField>
    <fullName>Oversea_Company_Sales_Department__c</fullName>
    <label>Oversea Company / Sales Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>