force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/Planning_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Planning_Turnover__c</fullName>
    <formula>N_Month_Planned_Sales_Volume__c  *  RNP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planning Turnover(del)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>