force-app/main/default/objects/Monthly_Sales_Forecast_VS_Actual_Report__c/fields/RNP__c.field-meta.xml
<CustomField>
    <fullName>RNP__c</fullName>
    <label>RNP(del)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>